--- a/index.html
+++ b/index.html
@@ -1,87 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-  <meta charset="utf-8">
-  <meta name="Casandra McDonald Portfolio" content="Senior User Experience User Interface Designer and Front-End Developer located in New York City." keywords="ux, ui, user experience, user interface, designer, developer, front-end developer, mobile designer, product manager, new york city, nyc, javascript, ios, mobile, programmer">
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Libre+Franklin:300&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/42a66a0b61.js"></script>
-  <title>Cas McDonald Portfolio Website: Profile</title>
-  <link rel="icon" type="image/png" href="img/favicon.png">
-  </head>
-  <div class="container">
-    <header>
-      <h1 class="name">Casandra McDonald</h1>
-      <h2 class="occupation">Senior Ux / Ui designer + Front end Developer <h2>
-        <nav class="main">
-          <ul>
-          <li><a href="index.html" id="current">profile</a></li>
-          <li><a href="casestudies.html">case studies</a></li>
-          <li><a href="resume.html">resume</a></li>
-          <li><a href="contact.html">contact</a></li>
-          </ul>
-        </nav>
-      <h3 class="pagetitle">Profile.</h3>
-    </header>
-    <body>
-      <img class="cas" img src="img/cas.png" height="200px" alt="Cas Profile Photo"></img>
-      <h4 class="intro">Casandra McDonald is a Senior UX / UI Designer, Front-End Web Developer, and Certified Scrum Master with over 10+ years of experience based in New York City. My goal is to help business grow by designing and developing web and native applications. I currently run my own <i class="special">consulting business</i> as a designer and developer for clients based in NYC, specializing in the finance and e-commerce industries.</h4>
-      <p class="about">
-        As a <strong>UX designer</strong>, I believe in user-centric design, and enforce those principles even throughout the design process. I follow the double diamond framework when starting any UX project: <strong>Discover, Design, Develop, Deliver.</strong> I work with companies on business strategy, perform competitive analysis, conduct user interviews, contextual inquiries, and usability testing. I also develop user personas, user flows, and feature prioritization with MVP focus. I possess a keen understanding of market dynamics that impact the successful launch of applications.
-        <br>
-        <br>
-        As a <strong>UI designer</strong>, I follow all up to date HCI and W3C guidelines for accessibly on desktop and mobile applications. I would describe my work as clean, beautiful, and asthetically pleasing. I conform to a <i class="special">"less is more"</i> methodology and apply that approach to reduce cognitive friction throughout all of my design deliverables. I create sketches and low, mid, and high fidelity mockups using Adobe XD and am well-versed in creating extremely detailed interactive prototypes with custom animations using XD and Principle. I frequently work with development teams to ensure pixel perfect asset delivery and create follow up documentation and style guides.
-        <br>
-        <br>
-        As a <strong>web developer</strong>, my goal is to write clean, semantic, accessible code. I work with HTML5, CSS3, JavaScript, and jQuery and PHP. I have hand coded over 200+ responsive websites and have experience building apps and APIs with the MERN stack: MongoDB, Express.js, React, and Node.js. I am currently in school at General Assembly until summer 2020 to expand my existing skillset in the Full Stack Development realm.
-        <br>
-        <br>
-        As a <strong>product manager</strong>, I am experienced at working on projects and leading teams to success at all stages from gathering requirements to deploying web and native mobile applications in Agile to enterprise level. I am expert in integrating Front-end, UI/UX capabilities and technical requirements into a cohesive strategy to final product delivery. I excel at collaborating in a cross-functional environment and building consensus through influence as a recognized subject matter expert in finance and data driven projects. </p>
-        <hr>
-      <h6 class="companies">Some companies I have worked with:</h6>
-        <ul class="clients">
-          <div class="row-1">
-            <li><img src="img/client-1.png" width="200px;"></img></li>
-            <li><img src="img/client-2.png" width="200px;"></img></li>
-            <li><img src="img/client-3.png" width="200px;"></img></li>
-          </div>
-          <div class="row-2">
-            <li><img src="img/client-4.jpg" width="200px;"></img></li>
-            <li><img src="img/client-5.png" width="200px;"></img></li>
-            <li><img src="img/client-6.png" width="200px;"></img></li>
-          </div>
-          <div class="row-2">
-            <li><img src="img/client-7.png" width="200px;"></img></li>
-            <li><img src="img/client-8.png" width="200px;"></img></li>
-            <li><img src="img/client-9.jpg" width="200px;"></img></li>
-          </div>
-      </ul>
-        <hr>
-      <h5 class="quote">“<i>The problem with the designs of most engineers is that they are too logical. We have to accept human behavior the way it is, not the way we would wish it to be.</i>” - Don Norman, <i class="special">Don't Make Me Think</i> </h5>
-      <h6 class="connect">Connect with me:</h6>
-      <nav>
-        <ul class="social">
-          <li><a class="fontawesome" href="https://www.linkedin.com/in/casmcdonald/" target="_blank"></li>
-            <span style="font-size: 3em; color: Tomato;">
-              <i class="fab fa-linkedin-in"></i>
-            </span></a>
-          <li><a class="fontawesome" href="https://github.com/defy1x" target="_blank"></li>
-            <span style="font-size: 3em; color: Tomato;">
-                <i class="fab fa-github"></i>
-          </span></a>
-          <li><a class="fontawesome" href="https://dribbble.com/casmcdonald" target="_blank"></li>
-            <span style="font-size: 3em; color: Tomato;">
-              <i class="fab fa-dribbble"></i>
-            </span></a>
-          <li><a class="fontawesome" href="https://www.instagram.com/casthecurious/" target="_blank"></li>
-            <span style="font-size: 3em; color: Tomato;">
-              <i class="fab fa-instagram"></i>
-            </span></a>
-        </ul>
-      </nav>
-      <footer>
-        <p class="copyright">&copy; 2019 CAS MCDONALD</p>
-      </footer>
-    </div>
-  </body>
+<html>
+	<head>
+	<title>Cas Weather App</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="Cas Responsive Weather App"/>
+
+	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="css/owl.carousel.css" rel="stylesheet" type="text/css" media="all">
+	<link href="https:fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css">
+
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="js/main.js"></script>
+
+	<!-- additional JS plugins! -->
+	<script src="js/owl.carousel.js"></script>
+	<script src="js/skycons.js"></script>
+	</head>
+	<body>
+		<!-- main -->
+		<div class="container">
+			<h1>Weather Forecast</h1>
+			<div class="form-container">
+				<form id="search-form" name="search-form" onsubmit="return search()">
+					<input type="text" id="zip-code" placeholder="Enter zipcode">
+					<input type="submit" name="search-btn" id="search-btn" value="">
+				</form>
+			</div>
+			<div class="main">
+				<div class="text-container">
+					<div class="date-container">
+						<h2 id="day"></h2>
+						<h2 id="date"></h2>
+					</div>
+						<h2 id="current-temp">24<span>°</span></h2>
+					<div class="min-max-container">
+						<h3 id="min-temp">21<span>°</span>F&nbsp;/&nbsp;</h3>
+						<h3 id="max-temp">30<span>°</span>F</h3>
+					</div>
+					<h4 id="city">Las Vegas</h4>
+					<h6 id="weather-status">Rain Falling</h6>
+				</div>
+				<div class="sliding-icons">
+					<div id="forecast-icons" class="owl-carousel owl-theme">
+						<div class="item agile-item">
+							<canvas id="sleet" width="40" height="40"></canvas>
+							<h6 id="forecast-day">Thr</h6>
+						</div>
+						<div class="item agile-item">
+							<canvas id="rain" width="40" height="40"></canvas>
+							<h6 id="forecast-day-1">Fri</h6>
+						</div>
+						<div class="item agile-item">
+							<canvas id="partly-cloudy-day" width="40" height="40"></canvas>
+							<h6 id="forecast-day-2">Sat</h6>
+						</div>
+						<div class="item agile-item">
+							<canvas id="cloudy" width="40" height="40"></canvas>
+							<h6 id="forecast-day-3">Sun</h6>
+						</div>
+						<div class="item agile-item">
+							<canvas id="clear-night" width="40" height="40"></canvas>
+							<h6 id="forecast-day-4">Mon</h6>
+						</div>
+						<div class="item agile-item">
+							<canvas id="clear-day" width="40" height="40"></canvas>
+							<h6 id="forecast-day-5">Tue</h6>
+						</div>
+						<div class="item agile-item">
+							<canvas id="partly-cloudy-night" width="40" height="40"></canvas>
+							<h6 id="forecast-day-6">Wed</h6>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
