--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 				<div class="text-container">
 					<h4 id="city"></h4>
 						<h2 id="day"></h2>
-						<h2 id="current-temp">24<span>°</span></h2>
+						<!-- <span>°</span> -->
+						<h2 id="current-temp"></h2>
 					<div class="min-max-container">
-						<h3 id="min-temp">21<span>°</span>F&nbsp;/&nbsp;</h3>
-						<h3 id="max-temp">30<span>°</span>F</h3>
+						<h3 id="min-temp"></h3>
+						<h3 id="max-temp"></h3>
 					</div>
 
 					<h6 id="weather-status"></h6>
