--- a/index.html
+++ b/index.html
@@ -1,58 +1,131 @@
 <!DOCTYPE html>
-<html>
-	<head>
-	<title>Cas Weather App</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Cas Responsive Weather App"/>
-
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="https:fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css">
-
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/skycons.js"></script>
-	</head>
-	<body>
-	<div id="background">
-		<div class="container">
-			<h1>Current Weather</h1>
-			<div class="form-container">
-				<form id="search-form" name="search-form" onsubmit="return search()">
-					<input type="text" id="zip-code" placeholder="Enter city or zip">
-					<input type="submit" name="search-btn" id="search-btn" value="">
-				</form>
-			</div>
-			<div class="main">
-				<div class="text-container">
-					<h4 id="city"></h4>
-						<h2 id="day"></h2>
-						<h2 id="current-temp"></h2>
-					<div class="min-max-container">
-						<h3 id="min-temp"></h3>
-						<h3 id="max-temp"></h3>
-					</div>
-					<h6 id="weather-status"></h6>
-				</div>
-					<div class="weather-icon">
-						<div id="forecast">
-							<div class="status">
-								<canvas id="clear-day" width="60" height="60"></canvas>
-								<canvas id="partly-cloudy-day" width="60" height="60"></canvas>
-								<canvas id="cloudy" width="60" height="60"></canvas>
-								<canvas id="rain" width="60" height="60"></canvas>
-								<canvas id="sleet" width="60" height="60"></canvas>
-								<canvas id="snow" width="60" height="60"></canvas>
-								<canvas id="wind" width="60" height="60"></canvas>
-								<canvas id="fog" width="60" height="60"></canvas>
-							</div>
-						</div>
-			 		</div>
-				</div>
-			</div>
-		</div>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <!--yay I added a fav icon!----->
+    <link rel="icon" type="image/png" href="./assets/images/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Libre+Franklin:300&display=swap" rel="stylesheet">
+    <title>Cas McDonald Web Developer Portfolio Site</title>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>Cas McDonald</h1>
+      <span>UX/UI Designer + Front-End Engineer</span>
+      <nav>
+        <ul>
+          <!--#top automatically brings user to the top of the window-->
+          <li><a href="#top">Profile</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+        <section id="profile">
+          <h2>Profile.</h2>
+          <figure>
+            <img src="assets/images/cas.jpg" alt="Cas Profile Photo"></img>
+          </figure>
+          <p><strong>Casandra McDonald</strong> is an NN/g Master Certified UX / UI Designer and Front-End Web Engineer with over 10+ years of experience based in New York City. Her goal is to help businesses grow by designing and developing web and native applications. She currently runs her consulting firm as a designer and developer for clients based in NYC, specializing in the finance and e-commerce industries.</p>
+          <p>As a <strong>UX Designer</strong>, I believe in user-centric design and enforce those principles throughout the design process. I follow the double diamond framework when starting any UX project: Discover, Design, Develop, Deliver. I work with companies on business strategy, perform competitive analysis, conduct user interviews, contextual inquiries, and usability testing. I also develop user personas, user flows, and feature prioritization with MVP focus. I possess a keen understanding of market dynamics that impact the successful launch of applications.</p>
+          <p>As a <strong>UI Designer</strong>, I follow all up-to-date HCI and W3C guidelines for accessibly on desktop and mobile applications. I would describe my work as clean, beautiful, and aesthetically pleasing. I conform to a "less is more" methodology and apply that approach to reduce cognitive friction throughout my design deliverables. I create sketches and low, mid, and high fidelity mockups using Adobe XD and am well-versed in creating highly detailed interactive prototypes with custom animations using XD and Principle. I frequently work with development teams to ensure pixel-perfect asset delivery and create follow-up documentation and style guides.</p>
+          <p>As a <strong>Front-End Engineer</strong>, my goal is to write clean, semantic, accessible code. I work with HTML5, CSS3, JavaScript, and jQuery, and PHP. I have hand-coded over 200+ responsive websites and have experience building apps and APIs with JS, Firebase, Node.js, Express, and Heroku. I am currently in school at Columbia University Software Engineering Bootcamp until Summer 2021 to expand my existing skillset in the Full Stack Development realm.</p>
+          <iframe width="400" height="265" src="https://www.youtube.com/embed/dw9MxyBWD6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+        <hr>
+        <section id="work">
+          <h2>Featured Work.</h2>
+          <div class="first-featured-work">
+            <figure>
+              <a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank"><img src="./assets/images/first-work.png" alt="First Featured Work Star Wars Quiz"></img></a>
+            </figure>
+            <p>Star Wars Personality Test built in HTML, CSS, & JS. Uses GIPHY and SWAPI.</p>
+            <p><a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/Star-Wars-Quiz" target="_blank">See the Code</a></p>
+          </div>
+          <div class="carousel">
+            <div class="carousel-item">
+              <figure>
+                <a href="https://defy1x.github.io/c03-Password-Generator/index.html" target="_blank"> <img src="./assets/images/work-1.jpg" alt="Second Featured Work Password Generator"></a>
+              </figure>
+              <p>A Star Wars Password Generator built in JS.</p>
+              <p><a href="https://defy1x.github.io/c03-Password-Generator/index.html" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/c03-Password-Generator" target="_blank">See the Code</a></p>
+            </div>
+            <div class="carousel-item">
+              <figure>
+                <a href="https://defy1x.github.io/c06-weather-app/" target="_blank"> <img src="./assets/images/work-2.jpg" alt="Third Feature Work Weather App"></a>
+              </figure>
+              <p>Weather App built in JS that uses OpenWeatherApi.</p>
+              <p><a href="https://defy1x.github.io/c06-weather-app/" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/c06-weather-app" target="_blank">See the Code</a></p>
+            </div>
+            <div class="carousel-item">
+              <figure>
+                <a href="https://defy1x.github.io/c04-Code-Quiz/" target="_blank"><img src="./assets/images/work-3.jpg" alt="Fourth Featured Work Coding Quiz"></a>
+              </figure>
+              <p>Happy Coding Quiz Project built in HTML, CSS, JS.</p>
+              <p><a href="https://defy1x.github.io/c04-Code-Quiz/index.html" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/c04-Code-Quiz" target="_blank">See the Code</a></p>
+          </div>
+       </div>
+       </section>
+       <hr>
+       <section id="resume">
+         <h2>Resume.</h2>
+         <div class="resume-img-container">
+           <figure>
+             <img src="./assets/images/cas-resume-front.png" alt="Front of Cas' Resume">
+           </figure>
+           <figure>
+             <img src="./assets/images/cas-resume-back.png" alt="Back of Cas' Resume">
+           </figure>
+         </div>
+         <p>Click the button to download my resume! :)</p>
+         <button>
+           <a id="download" href="./assets/Casandra-McDonald-Resume.pdf" target="_blank">Download my resume</a>
+         </button>
+       </section>
+        <hr>
+      <section id="contact">
+        <h2>Contact.</h2>
+        <p>Here are my details to get in touch.</p>
+          <div class="details">
+            <p>Email: <a href="mailto:cas@casmcdonald.com?subject=Heya%20Cas%20From%20Portfolio%20Site">Cas@casmcdonald.com</a></p>
+          </div>
+            <nav>
+             <ul class="social">
+               <li id="fa-no-padding"><a class="fontawesome" href="https://www.linkedin.com/in/casmcdonald/" target="_blank"></li>
+                 <!--inline styling needed for this library to work-->
+                <span style="font-size: 3em; color: red;">
+                   <i class="fab fa-linkedin-in"></i>
+                 </span></a>
+               <li><a class="fontawesome" href="https://github.com/defy1x" target="_blank"></li>
+                 <!--inline styling needed for this library to work-->
+                 <span style="font-size: 3em; color: red;">
+                    <i class="fab fa-github"></i>
+              </span></a>
+               <li><a class="fontawesome" href="https://dribbble.com/casmcdonald" target="_blank"></li>
+                 <!--inline styling needed for this library to work-->
+                 <span style="font-size: 3em; color: red;">
+                   <i class="fab fa-dribbble"></i>
+                </span></a>
+              <li><a class="fontawesome" href="https://uxfol.io/casmcdonald" target="_blank"></li>
+                <!--inline styling needed for this library to work-->
+                 <span style="font-size: 3em; color: red;">
+                  <i class="fab fa-fort-awesome"></i>
+                 </span></a>
+              </ul>
+            </nav>
+        </section>
+     <footer>
+       <p>&copy; Copyright 2021 Cas McDonald</p>
+     </footer>
+    </main>
+    <!--amazing font library that uses icons-->
+   <script src="https://kit.fontawesome.com/42a66a0b61.js"></script>
+  </body>
+</div>
 </html>
